package at.htl.entities;

public class Customer {

    int customerID;
    String firstname;
    String lastname;
    Invoice[] invoice;

    public static void main(String[] args) {

    }

}
