package at.htl.entities;

import java.util.Date;

public class Invoice {

    int invoiceID;
    int salesmanID;
    int customerID;
    InvoicePosition[] positions;
    Date invoiceDate;

    public static void main(String[] args) {

    }

}
