package at.htl.entities;

public class InvoicePosition {

    int productID;
    int quantity;

    public static void main(String[] args) {

    }
}
