package at.htl.entities;

public class Salesman {

    int salesmanID;
    String firstname;
    String lastname;
    String address;

    public static void main(String[] args) {

    }

}
